src/objects/RAD_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Announcement_End_Date__c</fullName>
        <label>Announcement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Announcement_Start_Date__c</fullName>
        <label>Announcement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Announcement_Subject__c</fullName>
        <label>Announcement Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <label>Announcement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purge_Limit__c</fullName>
        <label>Purge Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAD_Portal_Contact_Address__c</fullName>
        <label>Portal Contact Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RAD_Portal_Forgot_Password_Note__c</fullName>
        <label>Portal Forgot Password Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RAD_Portal_Forgot_UserName_Note__c</fullName>
        <label>Portal Forgot UserName Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RAD_Purge_Extension_Months__c</fullName>
        <description>Purge Extension in months</description>
        <label>Purge Extension(Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Duration_Months__c</fullName>
        <label>Update Duration (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RAD Configuration</label>
    <nameField>
        <label>RAD Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAD Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>